kubernetes/deploy/uptime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: uptime-kuma
spec:
  rules:
  - host: uptime.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: uptime-kuma
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
